# xapi-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: test.yml
examples/: concurrent.rs  get-all-symbols.rs  get-calendar.rs  get-chart-last-request.rs  get-chart-range-request.rs  get-commission-def.rs  get-current-user-data.rs  get-ibs-history.rs  get-margin-level.rs  get-margin-trade.rs  get-news.rs  get-profit-calculation.rs  get-server-time.rs  get-step-rules.rs  get-symbol.rs  get-tick-prices.rs  get-trade-records.rs  get-trades-history.rs  get-trades.rs  get-trading-hours.rs  get-version.rs  listen-balance.rs  listen-candles.rs  listen-keep-alive.rs  listen-news.rs  listen-profits.rs  listen-tick-prices.rs  listen-trade-status.rs  listen-trades.rs  skip-delay.rs  trade-transaction.rs
src/: connection.rs  credentials.rs  data.rs  enums.rs  error.rs  lib.rs  socket.rs  stream.rs
