[package]
name = "xapi"
version = "0.0.1"
edition = "2021"
authors = ["Paweł Knioła"]
description = "The xStation5 API Rust library"
license = "MIT"
repository = "https://github.com/pawelkn/xapi-rs"
readme = "README.md"
keywords = ["rust", "bitcoin", "trading", "websocket", "trading-api", "forex", "xapi", "forex-trading", "exchange-api", "forex-data", "xstation", "xstation5", "xtb", "xopenhub", "forex-api", "xopenhub-api", "xtb-api", "xstation-api", "x-trade-brokers", "bfbcapital"]
categories = ["api-bindings"]

[dependencies]
serde_json = "^1.0"
thiserror = "^1.0"
futures = "^0.3"

[dependencies.tokio]
version = "^1.35"
features = ["full"]

[dependencies.tokio-tungstenite]
version = "^0.15"
features = ["native-tls"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.futures-util]
version = "^0.3"
default-features = false
features = ["sink"]
