[package]
name = "xapi"
version = "0.2.2"
edition = "2021"
authors = ["Paweł Knioła"]
description = "The xStation5 API Rust library"
license = "MIT"
repository = "https://github.com/pawelkn/xapi-rs"
readme = "README.md"
keywords = ["xapi-rs", "xstation", "xstation5", "xtb", "xtb-api"]
categories = ["api-bindings"]

[dependencies]
futures = "^0.3"
futures-util = { version = "^0.3", default-features = false, features = ["sink"] }
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tokio = { version = "^1.35", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-tungstenite = { version = "^0.15", features = ["native-tls"] }